# DragEx

./: .gitignore  .gitmodules  README.md  build.sh  build_cp311.sh  buildfakeforvenv.sh  format.sh  pyproject.toml  test.py  test.sh  test_out.c
.github/scripts/: configure_blender_manifest.py  gen_build_id.py  update_blender_manifest.py  update_wheels_list.py
.github/workflows/: build.yml  extension-repositories.yml  push.yml  release-nightly.yml  release.yml
dragex_addon/: .gitignore  __init__.py  blender_manifest.in.toml  blender_manifest.toml  build_id.py  cli_command.py  material_modes.py  mesh.py  ootstuff.py  quick_and_dirty.py  util.py
dragex_addon/f64render_dragex/: common.py  oot.py  properties.py  renderer.py  sm64.py  tmp_porting.py
dragex_addon/map_template/: frag_spec_room.inc  frag_table_rooms.h  header_room_0.inc.c  header_scene.inc.c  table_cameras.h  table_envlightsettings.h  table_polytypes.h  (+1 more)
dragex_backend/: .clang-format  .gitignore  README.md  build_id.h  build_id.txt  compile_flags.txt  pyproject.toml  setup.py
dragex_backend/dragex_backend/: __init__.pyi  logging.pyi
dragex_backend/src/: exporter.c  exporter.h  main.c
dragex_backend/src/logging/: logging.c  logging.h  py_logging.c  py_logging.h
dragex_backend/src/py/: converters.c  converters.h  corner_mat_info_obj.c  main.c  mat_info_combiner_obj.c  mat_info_geometry_mode_obj.c  mat_info_image_obj.c  mat_info_obj.c  mat_info_other_modes_obj.c  mat_info_tile_obj.c  mat_info_vals_obj.c  mesh_info_obj.c  name_to_enum.h  objs.h  oot_collision_objs.c  oot_collision_objs.h
(+48 files in other folders)
